--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -42,10 +42,12 @@
                 
             </TabItem>
             <TabItem Header="Обучение">
-                <Grid Background="#FFE5E5E5"/>
+                <Grid Background="#FFE5E5E5">
+                </Grid>
             </TabItem>
             <TabItem Header="Переобучение">
-                <Grid Background="#FFE5E5E5"/>
+                <Grid Background="#FFE5E5E5">
+                </Grid>
             </TabItem>
         </TabControl>
 
