--- a/Windows/AlphabetCreateConsole.xaml
+++ b/Windows/AlphabetCreateConsole.xaml
@@ -1,5 +1,6 @@
 ﻿<Window x:Class="ISRMUL.Windows.AlphabetCreateConsole"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Консоль формирования алфавита" Height="500" Width="600">
     <Grid Background="#FFE5E5E5"> 
@@ -14,8 +15,17 @@
             <Button x:Name="LearningButton" Height="50" Click="LearningButton_Click_1">
                 <Image Source="images/learn.png"/>
             </Button>
-            <Button x:Name="MakeButton" Height="50">
-                <Image Source="images/make.png"/>
+            <Button x:Name="MakeButton" Height="250" Click="MakeButton_Click_1">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="3*"/>
+                        <RowDefinition Height="2*"/>
+                        <RowDefinition Height="8*"/>
+                    </Grid.RowDefinitions>
+                    <TextBlock Grid.Row="0" Text="Уникальных символов" TextWrapping="Wrap"/>
+                    <TextBox x:Name="ClassNumber" Grid.Row="1" Text="1"/>
+                    <Image Source="images/make.png" Grid.Row="2"/> 
+                </Grid>
             </Button>
         </StackPanel>
     </Grid>
