--- a/Control/Alphabet/AlphabetEditorView.xaml
+++ b/Control/Alphabet/AlphabetEditorView.xaml
@@ -3,10 +3,13 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:alphabet="clr-namespace:ISRMUL.Control.Alphabet"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d" 
              d:DesignHeight="500" d:DesignWidth="800"
              x:Name="Editor">
+    <UserControl.CommandBindings>
+        <CommandBinding Command="alphabet:CustomAlphabetCommands.SelectAll" Executed="Select_All_Command"/>
+    </UserControl.CommandBindings>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="1*"/>
