--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -4,6 +4,7 @@
         xmlns:page="clr-namespace:ISRMUL.Control.Page"
         xmlns:alphabet="clr-namespace:ISRMUL.Control.Alphabet"
         xmlns:editor="clr-namespace:ISRMUL.Control.Editor"
+        xmlns:textEditor="clr-namespace:ISRMUL.Control.Text"
         xmlns:manuscript="clr-namespace:ISRMUL.Manuscript"
         xmlns:sys="clr-namespace:System;assembly=mscorlib" 
         xmlns:self="clr-namespace:ISRMUL"
@@ -18,6 +19,10 @@
         <CommandBinding Command="Open" Executed="OpenProjectCommand" />
         <CommandBinding Command="Save" Executed="SaveProjectCommand" />
         <CommandBinding Command="Close" Executed="CloseProjectCommand" />
+
+
+        <CommandBinding Command="self:CustomCommands.CreateAlphabet" Executed="CreateAlphabetCommand" />
+        <CommandBinding Command="self:CustomCommands.Learn" Executed="LearnCommand" />
     </Window.CommandBindings>
     <Grid>
         <Grid.RowDefinitions>
@@ -34,11 +39,16 @@
                 <Separator/>
                 <MenuItem Header="Выход"/>               
             </MenuItem>
-            <MenuItem Header="База знаний">
+            <MenuItem Header="База знаний" IsEnabled="{Binding ProjectReady, ElementName=MainForm, Mode=OneWay}" Command="Save">
                 <MenuItem Header="Выгрузить" Command="self:CustomCommands.KBSave"/>
                 <MenuItem Header="Загрузить" Command="self:CustomCommands.KBLoad"/>
                 <MenuItem Header="Импорт" Command="self:CustomCommands.KBImport"/>
             </MenuItem>
+            <MenuItem Header="Обучение" IsEnabled="{Binding ProjectReady, ElementName=MainForm, Mode=OneWay}" Command="Save">
+                <MenuItem Header="Консоль формирования алфавита" Command="self:CustomCommands.CreateAlphabet"/>
+                <MenuItem Header="Консоль обучения" Command="self:CustomCommands.Learn"/>
+            </MenuItem>
+            
             
         </Menu>
 
@@ -59,12 +69,9 @@
                 </Grid>
                 
             </TabItem>
-            <TabItem Header="Обучение">
+            <TabItem Header="Текст">
                 <Grid Background="#FFE5E5E5">
-                </Grid>
-            </TabItem>
-            <TabItem Header="Переобучение">
-                <Grid Background="#FFE5E5E5">
+                    <textEditor:TextEditor x:Name="TextEditor" textProject="{Binding CurrentProject, ElementName=MainForm, Mode=OneWay}"/>
                 </Grid>
             </TabItem>
         </TabControl>
