--- a/Windows/LearnConsole.xaml
+++ b/Windows/LearnConsole.xaml
@@ -1,8 +1,8 @@
-﻿<Window x:Class="ISRMUL.Windows.AlphabetCreateConsole"
+﻿<Window x:Class="ISRMUL.Windows.LearnConsole"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Консоль формирования алфавита" Height="500" Width="600">
+        Height="500" Width="600">
     <Grid Background="#FFE5E5E5"> 
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="4*"/>
