Add tool tips on visual components

--- a/Control/Alphabet/AlphabetEditorView.xaml
+++ b/Control/Alphabet/AlphabetEditorView.xaml
@@ -33,10 +33,10 @@
                             <ColumnDefinition Width="1*"/>
                             <ColumnDefinition Width="1*"/>
                         </Grid.ColumnDefinitions>
-                        <Button x:Name="toCurrentAlphabetButton" Grid.Column="0" Click="toCurrentAlphabetButton_Click_1">
+                        <Button x:Name="toCurrentAlphabetButton" Grid.Column="0" Click="toCurrentAlphabetButton_Click_1" ToolTip="Переместить в выбранный набор символа">
                             <Image Source="images/toAlphabet.png"/>
                         </Button> 
-                        <Button x:Name="toBaseButton" Grid.Column="2" Click="toBaseButton_Click_1">
+                        <Button x:Name="toBaseButton" Grid.Column="2" Click="toBaseButton_Click_1" ToolTip="Переместить в базу знаний">
                             <Image Source="images/toBase.png"/>
                         </Button>
                     </Grid>
@@ -57,11 +57,11 @@
                             <ColumnDefinition Width="10*"/>
                             <ColumnDefinition Width="10*"/>
                         </Grid.ColumnDefinitions>
-                        <ComboBox x:Name="AlphabetCombo" Grid.Column="0"/>
-                        <Button x:Name="ChangeAlphabetButton" Grid.Column="1" Click="changeAlphabetButton_Click_1">
+                        <ComboBox x:Name="AlphabetCombo" Grid.Column="0" ToolTip="Выберите символ для перемещения"/>
+                        <Button x:Name="ChangeAlphabetButton" Grid.Column="1" Click="changeAlphabetButton_Click_1" ToolTip="Переместить в выбранный символ">
                             <Image Source="images/changeAlphabet.png"/>
                         </Button>
-                        <Button x:Name="removeFromCurrentAlphabetButton" Grid.Column="2" Click="removeFromCurrentAlphabetButton_Click_1">
+                        <Button x:Name="removeFromCurrentAlphabetButton" Grid.Column="2" Click="removeFromCurrentAlphabetButton_Click_1" ToolTip="Удалить из набора">
                             <Image Source="images/delete.png"/>
                         </Button>
                     </Grid>
@@ -82,13 +82,13 @@
                             <ColumnDefinition Width="1*"/>
                             <ColumnDefinition Width="1*"/>
                         </Grid.ColumnDefinitions>
-                        <Button x:Name="createAlphabetButton" Grid.Column="2" Click="createAlphabetButton_Click_1">
+                        <Button x:Name="createAlphabetButton" Grid.Column="2" Click="createAlphabetButton_Click_1" ToolTip="Сформировать алфавит">
                             <Image Source="images/refresh.png"/>
                         </Button>
-                        <Button x:Name="deleteSymbolFromBaseButton" Grid.Column="1" Click="deleteSymbolFromBaseButton_Click_1">
+                        <Button x:Name="deleteSymbolFromBaseButton" Grid.Column="1" Click="deleteSymbolFromBaseButton_Click_1" ToolTip="Удалить из базы знаний">
                             <Image Source="images/delete.png"/>
                         </Button>
-                        <Button x:Name="toCurrentAlphabetButton1" Grid.Column="0" Click="toCurrentAlphabetButton1_Click_1">
+                        <Button x:Name="toCurrentAlphabetButton1" Grid.Column="0" Click="toCurrentAlphabetButton1_Click_1" ToolTip="Добавить в набор символа">
                             <Image Source="images/toAlphabet.png"/>
                         </Button>
                     </Grid>
